[gd_scene load_steps=9 format=4 uid="uid://dcuicb6yl7h7m"]

[ext_resource type="Script" uid="uid://bpt4s0ma6hsjy" path="res://Scripts/wagon.gd" id="1_mq5fo"]
[ext_resource type="TileSet" uid="uid://buvia4xnoyvec" path="res://Resources/wagon_tileset.tres" id="2_okys2"]
[ext_resource type="Texture2D" uid="uid://cc0i252pgylxq" path="res://Assets/Sprites/wagon_door_exit_arrows.png" id="3_8wkxq"]
[ext_resource type="TileSet" uid="uid://c7pvh4kvbyymp" path="res://Resources/chairs_tileset.tres" id="3_g4tbb"]
[ext_resource type="Texture2D" uid="uid://dbgqnimhon67a" path="res://Assets/Sprites/suitcase_shelves.png" id="3_okys2"]
[ext_resource type="PackedScene" uid="uid://4e61xs8kmtjg" path="res://Scenes/camera_on_rail.tscn" id="4_8wkxq"]

[sub_resource type="Curve2D" id="Curve2D_5p62l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 480, 222.353, 0, 0, 0, 0, 1677, 222.353)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcg6c"]
size = Vector2(20, 275)

[node name="Wagon2" type="Node2D"]
script = ExtResource("1_mq5fo")

[node name="Wagon" type="TileMapLayer" parent="."]
position = Vector2(-50, 167)
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAACAAAAAAAFAAAAAAADAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAADAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAADAAAAAAAIAAAAAAAEAAAAAAABAAAAAAACAAAAAAAJAAAAAAAGAAAAAAAKAAAAAAAIAAAAAAALAAAAAAAAAAAAAAAAAAAAAAABAAAAAAA=")
tile_set = ExtResource("2_okys2")

[node name="RightExitArrow" type="Sprite2D" parent="."]
position = Vector2(2698, 404)
scale = Vector2(3, 2.8)
texture = ExtResource("3_8wkxq")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="LeftExitArrow" type="Sprite2D" parent="."]
position = Vector2(268, 404)
scale = Vector2(3, 2.8)
texture = ExtResource("3_8wkxq")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="YSort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="SuitcaseShelf" type="Sprite2D" parent="YSort"]
position = Vector2(453, 420)
scale = Vector2(2.25, 2.25)
texture = ExtResource("3_okys2")
region_enabled = true
region_rect = Rect2(0, 0, 66, 125)

[node name="SuitcaseShelf2" type="Sprite2D" parent="YSort"]
position = Vector2(2487, 420)
scale = Vector2(2.25, 2.25)
texture = ExtResource("3_okys2")
region_enabled = true
region_rect = Rect2(0, 0, 66, 125)

[node name="Chairs" type="TileMapLayer" parent="YSort"]
y_sort_enabled = true
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAKAAkAAQAAAAAAAgAMAAkAAQAAAAAAAgASAAkAAQAAAAAAAgAUAAkAAQAAAAAAAgAMAAoAAQAAAAAAAQASAAoAAQAAAAAAAQAUAAoAAQAAAAAAAQAWAAkAAQAAAAAAAgAWAAoAAQAAAAAAAQAIAAkAAQAAAAAAAgAKAAoAAQAAAAAAAQAIABIAAQAAAAAAAQAKABIAAQAAAAAAAQAMABIAAQAAAAAAAQAOABIAAQAAAAAAAQAQABIAAQAAAAAAAQASABIAAQAAAAAAAQAUABIAAQAAAAAAAQAWABIAAQAAAAAAAQAIABEAAQAAAAAAAgAKABEAAQAAAAAAAgAMABEAAQAAAAAAAgAOABEAAQAAAAAAAgAQABEAAQAAAAAAAgASABEAAQAAAAAAAgAUABEAAQAAAAAAAgAWABEAAQAAAAAAAgAOAAkAAQAAAAAAAgAQAAkAAQAAAAAAAgAQAAoAAQAAAAAAAQAOAAoAAQAAAAAAAQAIAAoAAQAAAAAAAQA=")
tile_set = ExtResource("3_g4tbb")

[node name="Passengers" type="Node2D" parent="YSort"]
y_sort_enabled = true

[node name="CameraOnRail" parent="." instance=ExtResource("4_8wkxq")]
position = Vector2(480, 317.647)
curve = SubResource("Curve2D_5p62l")

[node name="LeftExitArea" type="Area2D" parent="."]
position = Vector2(234, 586)
scale = Vector2(1.75, 1.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftExitArea"]
position = Vector2(0, 41.5)
shape = SubResource("RectangleShape2D_xcg6c")

[node name="RightExitArea" type="Area2D" parent="."]
position = Vector2(2733, 584)
scale = Vector2(1.75, 1.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightExitArea"]
position = Vector2(0, 41.5)
shape = SubResource("RectangleShape2D_xcg6c")

[node name="LeftEntranceMarker" type="Marker2D" parent="."]
position = Vector2(474, 693)

[node name="LeftCameraMarker" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="RightEntranceMarker" type="Marker2D" parent="."]
position = Vector2(2540, 693)

[node name="RightCameraMarker" type="Marker2D" parent="."]
position = Vector2(2157, 540)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(215, 538, 227, 495, 256, 466, 328, 458, 379, 466, 378, 512, 527, 510, 527, 465, 716, 463, 734, 549, 2107, 553, 2164, 450, 2412, 450, 2413, 515, 2562, 516, 2562, 456, 2659, 463, 2719, 486, 2754, 537, 2753, 855, 2682, 901, 2593, 932, 2103, 935, 2125, 886, 2135, 857, 722, 860, 719, 937, 349, 934, 287, 895, 251, 865, 217, 839, 220, 977, 3117, 977, 3120, 166, 212, 168, 212, 846, 217, 838)

[connection signal="child_entered_tree" from="YSort" to="." method="_on_y_sort_child_entered_tree"]
[connection signal="body_entered" from="LeftExitArea" to="." method="_on_left_exit_area_body_entered"]
[connection signal="body_entered" from="RightExitArea" to="." method="_on_right_exit_area_body_entered"]
